[package]
name = "proxy-rotator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
anyhow = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dashmap = "6"

[dev-dependencies]
tempfile = "3.25.0"
