[package]
name = "proxy-rotator"
version = "0.4.0"
edition = "2021"

[lib]
name = "proxy_rotator"
path = "src/lib.rs"

[[bin]]
name = "proxy-rotator"
path = "src/main.rs"

[[bin]]
name = "gen-openapi"
path = "src/bin/gen_openapi.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
anyhow = "1"
http = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dashmap = "6"
serde_json = "1"
utoipa = { version = "5", features = ["openapi_extensions"] }

[dev-dependencies]
tempfile = "3.25.0"
