[package]
name = "proxy-gateway-source-geonode"
version = "0.1.0"
edition = "2021"

[dependencies]
proxy-gateway-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json.workspace = true
